update ecrm20 closing slides

--- a/2020-11-27-ecrm20/closing_slides/css/ecrm.css
+++ b/2020-11-27-ecrm20/closing_slides/css/ecrm.css
@@ -138,8 +138,7 @@ section.has-light-background h6 {
 
 .intimg {
 	border-radius: 25%;
-	float: right;
-	max-height: 20vh;
+	max-height: 20vh !important;
 	padding: 1%
 }
 
