--- a/2021-02-01-midterm-evaluation/introduction_slides/css/phd.css
+++ b/2021-02-01-midterm-evaluation/introduction_slides/css/phd.css
@@ -203,6 +203,7 @@ img.nohighlight:hover {
 .glass {
 	background-color: rgba(224, 224, 224, 0.2); 
 	border-radius: 20px;
+	margin-top: -3em;
 	padding: 1em;
 }
 
