--- a/2021-03-01-midterm-evaluation/introduction_slides/css/phd.css
+++ b/2021-03-01-midterm-evaluation/introduction_slides/css/phd.css
@@ -208,8 +208,10 @@ img.nohighlight:hover {
 	margin: auto;
 	margin-bottom: 2em;
 	padding: 1em;
-	backdrop-filter: blur(10px);
-	-webkit-backdrop-filter: blur(10px);
+	backdrop-filter: blur(5px);
+	-webkit-backdrop-filter: blur(5px);
+	-moz-backdrop-filter: blur(5px);
+	-ms-backdrop-filter: blur(5px);
 	box-shadow: 2px 2px 2px rgb(255, 255, 255, 0.2);
 }
 
