--- a/2021-11-15-imaging-group-phd-day/imaging-group-phd-day-slides/css/phd-day.scss
+++ b/2021-11-15-imaging-group-phd-day/imaging-group-phd-day-slides/css/phd-day.scss
@@ -78,7 +78,7 @@ ul, ol {
     }
     &.resources {
         & li {
-            font-size: 2.5vmin;
+            font-size: 2.25vh;
             padding-bottom: 0.5em;
         }
     }
