update to final slides

--- a/2023-10-26-psi-phd-seminar/psi-phd-seminar-slides/style.scss
+++ b/2023-10-26-psi-phd-seminar/psi-phd-seminar-slides/style.scss
@@ -93,6 +93,9 @@ html {
   align-items: center; 
   text-align: center; 
   min-height: 80vh;
+  & code {
+    font-size: 140%;
+  }
 }
 
 // title page
