--- a/2024-11-19-phd-defense/disputation-slides/css/defense.css
+++ b/2024-11-19-phd-defense/disputation-slides/css/defense.css
@@ -46,7 +46,7 @@ section.has-light-background h6 {
  *********************************************/
 
 .accent {
-  color: var(--light-accent2);
+  color: var(--primary-accent);
 }
 
 .vcenter {
