--- a/2024-11-19-phd-defense/trial-lecture-slides/css/defense.css
+++ b/2024-11-19-phd-defense/trial-lecture-slides/css/defense.css
@@ -152,6 +152,10 @@ section.has-light-background h6 {
   width: 80%;
 }
 
+.reveal figure.large-image img {
+  width: 100%;
+}
+
 .reveal figure iframe {
   margin-top: -2em;
   width: 100%;
