--- a/style.css
+++ b/style.css
@@ -1,120 +1,147 @@
-@import url('https://fonts.googleapis.com/css2?family=Alegreya+Sans:ital,wght@0,100;0,300;0,400;0,500;0,700;0,800;0,900;1,100;1,300;1,400;1,500;1,700;1,800;1,900&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Alegreya+SC:ital,wght@0,400;0,500;0,700;0,800;0,900;1,400;1,500;1,700;1,800;1,900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Alegreya+Sans:ital,wght@0,100;0,300;0,400;0,500;0,700;0,800;0,900;1,100;1,300;1,400;1,500;1,700;1,800;1,900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Alegreya+SC:ital,wght@0,400;0,500;0,700;0,800;0,900;1,400;1,500;1,700;1,800;1,900&display=swap");
 
 /* Set variables */
 :root {
-    --text-color: #eee;
-    --background-color: rgb(38,38,38); 
-    --accent-color: #CD5D67;
-    --main-font-family: 'Alegreya Sans', sans-serif;
-    --header-font-family: 'Alegreya SC', serif;
-  }
-  
+  --text-color: #eee;
+  --background-color: rgb(38, 38, 38);
+  --accent-color: #cd5d67;
+  --main-font-family: "Alegreya Sans", sans-serif;
+  --header-font-family: "Alegreya SC", serif;
+}
+
 /* Set globals */
 
 body {
-    font-family: var(--main-font-family);
-    font-weight: 500;
-    font-size: 15pt;
-    color: var(--text-color);
-    background-color: var(--background-color);
+  font-family: var(--main-font-family);
+  font-weight: 500;
+  font-size: 15pt;
+  color: var(--text-color);
+  background-color: var(--background-color);
+}
+
+body.black-bg {
+  background-color: black;
+  margin: 0;
 }
 
 .container {
-    width: 60%;
-    margin: auto;
+  width: 60%;
+  margin: auto;
 }
 @media (max-width: 1000px) {
-    .container {
-        width: 95%;
-    }
+  .container {
+    width: 95%;
+  }
 }
 
 i {
-    color: var(--accent-color);
+  color: var(--accent-color);
 }
 
 /* Set text style */
 
-h1, h2, h3, h4, h5, h6 {
-    font-family: var(--header-font-family);
-    font-size: 40pt;
-    font-weight: 800;
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: var(--header-font-family);
+  font-size: 40pt;
+  font-weight: 800;
 }
 
 h1 {
-    padding-bottom: 0.5em;
+  padding-bottom: 0.5em;
 }
 
 a {
-    color: var(--accent-color);
+  color: var(--accent-color);
 }
 
 a:hover {
-    filter: brightness(130%);
-    transition: all .5s ease;
+  filter: brightness(130%);
+  transition: all 0.5s ease;
 }
 
 /* Table style */
 .tb {
-    position: relative;
-    width: 100%;
-    table-layout: fixed;
-	border-collapse: collapse;
-    text-align: left;
-    vertical-align: middle;
-    margin-bottom: 8vh;
+  position: relative;
+  width: 100%;
+  table-layout: fixed;
+  border-collapse: collapse;
+  text-align: left;
+  vertical-align: middle;
+  margin-bottom: 8vh;
 }
 
 .tb td {
-	overflow: hidden;
-    padding-top: 10px;
-    padding-right: 20px; 
-    padding-bottom: 10px;
-    padding-left: 20px;
-	word-break: normal;
+  overflow: hidden;
+  padding-top: 10px;
+  padding-right: 20px;
+  padding-bottom: 10px;
+  padding-left: 20px;
+  word-break: normal;
 }
 
-.tb th{
-    overflow: hidden;
-    padding-top: 20px;
-    padding-right: 20px; 
-    padding-bottom: 10px;
-    padding-left: 20px;
-    word-break: normal;
-    font-variant: small-caps;
-    font-weight: 900;
-    border-bottom: 1px solid var(--text-color);
+.tb th {
+  overflow: hidden;
+  padding-top: 20px;
+  padding-right: 20px;
+  padding-bottom: 10px;
+  padding-left: 20px;
+  word-break: normal;
+  font-variant: small-caps;
+  font-weight: 900;
+  border-bottom: 1px solid var(--text-color);
 }
 
 .newtab {
-    cursor: pointer;
+  cursor: pointer;
 }
 
-[data-href] { 
-    cursor: pointer; 
+[data-href] {
+  cursor: pointer;
 }
-[data-href]:hover { 
-    cursor: pointer; 
-    color: var(--accent-color);
-    filter: brightness(130%);
-    transition: all .5s ease;
+[data-href]:hover {
+  cursor: pointer;
+  color: var(--accent-color);
+  filter: brightness(130%);
+  transition: all 0.5s ease;
 }
 
 /* Style buttons */
 .btn {
-    background-color: transparent;
-    border: none;
-    color: var(--text-color);
-    padding: 12px 16px;
-    font-size: 16px;
-    cursor: pointer;
-    position: absolute;
-    bottom: 0;
+  background-color: transparent;
+  border: none;
+  color: var(--text-color);
+  padding: 12px 16px;
+  font-size: 16px;
+  cursor: pointer;
+  position: absolute;
+  bottom: 0;
 }
-  
+
 .btn:hover {
-    color: var(--accent-color);
-    filter: brightness(130%);
-    transition: all .5s ease;
+  color: var(--accent-color);
+  filter: brightness(130%);
+  transition: all 0.5s ease;
+}
+
+.reveal-container {
+  max-height: 100vh;
+  max-width: 100vw;
+  overflow: hidden;
+}
+
+iframe.slides-frame {
+  margin: auto;
+  border: 1px solid black;
+  -webkit-transform-origin-x: 0;
+  -ms-transform-origin-x: 0;
+  -moz-transform-origin-x: 0;
+  -webkit-transform-origin-y: 0;
+  -ms-transform-origin-y: 0;
+  -moz-transform-origin-y: 0;
 }
